[package]
name = "vento"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
config = "0.15.11"
cron = "0.15.0"
dirs = "6.0.0"
etcetera = "0.10.0"
fern = "0.7.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
ssh2 = "0.9.5"
ssh2-config = "0.5.4"
thiserror = "2.0.12"
