[package]
name = "vento"
version = "0.3.0"
edition = "2024"
authors = ["Kyota <jagbvg.eptpeox@gmail.com>"]
license = "MIT"
description = "A command line tool for simple and fast file transfer and job coordination."
readme = "README.md"
homepage = "https://github.com/kyotalab/vento"
repository = "https://github.com/kyotalab/vento"
keywords = ["sftp", "cli", "transfer"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
config = "0.15.11"
cron = "0.15.0"
crossterm = "0.29.0"
dirs = "6.0.0"
etcetera = "0.10.0"
fern = "0.7.1"
lazy_static = "1.5.0"
log = "0.4.27"
once_cell = "1.21.3"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
ssh2 = "0.9.5"
ssh2-config = "0.5.4"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"]}
